[package]
name = "warp"
version = "0.1.0"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10"
tokio = {version = "0.2", features = ["macros"]}
warp = "0.2"